fix z-index hover problem

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -33,10 +33,14 @@ html{
 
     }
 }
+body{
+}
 a{
     text-decoration: none;
 }
 header{
+    position: relative;
+    z-index: 20;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -74,6 +78,7 @@ header{
     }
     select{
         background: white;
+        position: relative;
         border-radius: 15px ;
         padding: 5px;
         z-index: 100 !important;
@@ -84,7 +89,6 @@ main{
     display: grid;
     position: relative;
     grid-template-rows: repeat(auto-fill,1fr);
-    z-index: -1;
     margin-bottom:140px;
     opacity: 0;
     animation: slide 2s 2s 1 ease forwards;
